--- a/css/style_index.css
+++ b/css/style_index.css
@@ -17,6 +17,7 @@ a{
     width: 100vw;
     height : 100vh;
 }
+/* content */
 .content{
     position:relative;
     width: 200%;
@@ -65,6 +66,7 @@ span[id=welcome]:hover:before{
     left:0;
     width: 100%;
 }
+/* tags */
 .tags{
     position:absolute;
     height: inherit;
