--- a/css/style_index.css
+++ b/css/style_index.css
@@ -1,116 +1,123 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500&display=swap');
 @import url('https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;400;500&display=swap');
 
 body{
-    font-family: 'Raleway', sans-serif;
     margin:0;
-    line-height: 1.5em;
-    font-weight: 300;
+    height: 100vh;
+    overflow:hidden;
 }
 a{
     text-decoration: none;
     color:#222;
 }
+p em{
+    color:crimson;
+    font-style: normal;
+}
 
-.container{
-    overflow:hidden;
-    width: 100vw;
-    height : 100vh;
-}
-/* content */
-.content{
-    position:relative;
-    width: 200%;
-    height: 100%;
-}
-.video-frame{
-    position:absolute;
-    top:0;
-    left:0;
-}
-.video-frame video{
-    position:absolute;
-    top:0;
-    left:0;
-    width:100vw;
-    height: 100vh;
-    min-height: 100vh;
-    min-width: 100vw;
-    object-fit: cover;
-    opacity: 1;
-    z-index: -1;
-}
-span[id=welcome]{
-    display:inline-block;
-    position:absolute;
+/* vertical move button */
+.vertical{
+    position:fixed;
     top:50%;
-    left:25%;
-    transform:translate(-25%,-50%);
-    color:white;
-    letter-spacing: 3px;
-    font-size:2em;
-    cursor:pointer;
-    font-weight: 500;
-}
-span[id=welcome]::before{
-    content:'';
-    position:absolute;
-    width: 0;
-    height: 2px;
-    background-color: whitesmoke;
-    left:50%;
-    bottom:-10px;
-    transition:0.3s;
-}
-span[id=welcome]:hover:before{
-    left:0;
-    width: 100%;
-}
-/* tags */
-.tags{
-    position:absolute;
-    height: inherit;
-    width: 100vw;
-    left:50%;
-    overflow:hidden;
+    right:5%;
+    z-index: 1;
+    font-size: 2.5em;
+    color:rgba(128, 128, 128, 0.4);
     opacity: 0;
 }
-.navi{
+.vertical span:nth-child(1)::before{
     position:absolute;
-    left:50%;
-    top:50%;
-    transform: translate(-50%,-50%);
-    list-style: none;
-}
-.navi li{
-    margin-bottom: 50px;
-}
-.navi li a{
-    position:relative;
-    font-size:4em;
-    letter-spacing: 2px;
-}
-.navi li a::after{
+    content:'\f0aa';
     font-family: fontawesome;
-    position:absolute;
-    top:-5px;
-    right:-35px;
-    font-size: 30px;
-    content:'\f053';
-    transition:0.3s;
-    line-height: 3em;
-    opacity: 0;
+    top:-25px;
+    cursor:pointer;
 }
-.navi li a:hover::after{
-    opacity: 1;
-}
-.photo{
+.vertical span:nth-child(2)::before{
     position:absolute;
-    width: 100%;
-    height: 100%;
+    content:'\f0ab';
+    font-family: fontawesome;
+    top:25px;
+    cursor:pointer;
+}
+.vertical span:nth-child(1):hover,
+.vertical span:nth-child(2):hover{
+    color:gray;
+}
+/* intro  */
+.welcome{
+    font-family: 'Raleway', sans-serif;
+    font-weight: 300;
+    font-size: 2.5em;
+    line-height: 100vh;
+    text-align: center;  
+    position:absolute;
     top:0;
     left:0;
-    background-size:cover;
-    background: url(../images/tags.jpg) no-repeat center center;
-    z-index:-1;
+    width: 100vw;
+    height: 100vh;
+}
+.welcome > span{
+    display:inline-block;
+}
+.black{
+    position: absolute;
+    width: 140%;
+    height: 100vh;
+    top:0;
+    left:-140%;
+    background-color: rgba(0, 0, 0, 0.897);
+}
+/* contents */
+.container{
+    position:absolute;
+    opacity: 0;
+    width: 100vw;
+    top:100%;
+    left:0;
+}
+section{
+    margin:0;
+    width: 100vw;
+    height: 100vh;
+    box-sizing: border-box;
+}
+section[id="sec_fir"]{
+    padding:50px 20px 20px 20px;
+}
+section[id="sec_sec"] > div{
+    height: 100%;
+}
+section[id="sec_last"] > div{
+    height: 100%;
+}
+.image-frame img{
+    width: 100%;
+    height: 500px;
+    object-fit: scale-down;
+}
+.iframe-sec{
+    width: 100%;
+    height: 100%;
+}
+
+img[id="treeImg"]{
+    object-fit: scale-down;
+    width: 100px;
+    height: 100px;
+    bottom:0;
+    right:0;
+}
+img[id="sittingImg"]{
+    display:inline-block;
+    object-fit: scale-down;
+    width: 100px;
+    height: 100px;
+}
+.treeImg{
+    position:absolute;
+    display: inline-block;
+    left:50%;
+    top:23%;
+    transform: translateX(-50%);
 }
